--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,36 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>登録情報編集</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+ <div class="field">
+    <%= f.label :名前 %>
+    （姓）<%= f.text_field :last_name, autofocus: true %>
+    （名）<%= f.text_field :first_name, autofocus: true %>
+  </div>
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :フリガナ %>
+    （セイ）<%= f.text_field :last_name_kana, autofocus: true %>
+    （メイ）<%= f.text_field :first_name_kana, autofocus: true %>
+  </div>
+  <div class="field">
+    <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  
+  <div class="field"><%# 変な文字列入っているが、hasmanyの設定後消えるっぽい？もし消えなければカラムの指定をaddress→customer.addressにすればいける？？？ %>
+    <%= f.label :郵便番号（ハイフンなし） %>
+    <%= f.text_field :postcode, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :住所 %>
+    <%= f.text_field :address, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.label :電話番号（ハイフンなし） %>
+    <%= f.text_field :phone_number, autofocus: true %>
   </div>
 
   <div class="actions">
@@ -36,8 +38,5 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
